Use the CMS garbage collector.